added hibernate-core dependency

--- a/dmit2015-instructor-oracle-human-resources/dmit2015-instructor-jpa-jsf-crud-demo/pom.xml
+++ b/dmit2015-instructor-oracle-human-resources/dmit2015-instructor-jpa-jsf-crud-demo/pom.xml
@@ -61,12 +61,12 @@
       <artifactId>arquillian-transaction-jta</artifactId>
       <version>1.0.5</version>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.hibernate</groupId>-->
-<!--      <artifactId>hibernate-core</artifactId>-->
-<!--      <version>5.4.27.Final</version>-->
-<!--      <scope>provided</scope>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.4.27.Final</version>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
