--- a/dmit2015-instructor-jaxrs-demo/pom.xml
+++ b/dmit2015-instructor-jaxrs-demo/pom.xml
@@ -165,6 +165,13 @@
       <groupId>org.microshed</groupId>
       <artifactId>microshed-testing-wildfly</artifactId>
       <version>0.9.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <version>1.15.2</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.rest-assured</groupId>
