--- a/dmit2015-rest-client/pom.xml
+++ b/dmit2015-rest-client/pom.xml
@@ -22,6 +22,27 @@
 
   <dependencies>
 
+    <!-- https://mvnrepository.com/artifact/org.omnifaces/omnifaces -->
+    <dependency>
+      <groupId>org.omnifaces</groupId>
+      <artifactId>omnifaces</artifactId>
+      <version>3.10.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>10.0.0-RC2</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/net.bootsfaces/bootsfaces -->
+    <dependency>
+      <groupId>net.bootsfaces</groupId>
+      <artifactId>bootsfaces</artifactId>
+      <version>1.5.0</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
