--- a/dmit2015-batch-ejb-demo/pom.xml
+++ b/dmit2015-batch-ejb-demo/pom.xml
@@ -59,9 +59,33 @@
     </dependency>
 
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.4.200</version>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-spatial</artifactId>
+      <version>5.4.30.Final</version>
+    </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>com.h2database</groupId>-->
+<!--      <artifactId>h2</artifactId>-->
+<!--      <version>1.4.200</version>-->
+<!--    </dependency>-->
+
+    <!--    <dependency>-->
+    <!--      <groupId>com.microsoft.sqlserver</groupId>-->
+    <!--      <artifactId>mssql-jdbc</artifactId>-->
+    <!--      <version>8.4.1.jre11</version>-->
+    <!--    </dependency>-->
+
+    <dependency>
+      <groupId>com.oracle.database.jdbc</groupId>
+      <artifactId>ojdbc11</artifactId>
+      <version>21.1.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.19</version>
     </dependency>
 
     <dependency>
